--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -56,5 +56,5 @@ $table-theme-color: #244b6c;
 $cell-error-background: rgb(214 44 26 / 5%);
 
 // Dark mode
-// $link-inverted: #1484e2;
 $link-inverted: #70bcff;
+$danger-inverted: #fa4242;
